# spiffy

./: .gitignore  README.md  config.py  generate_readme.py  init_data.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  jinja_filters.py  models.py
app/admin/: metrics_decorator.py  metrics_routes.py  routes.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/randomizer/: __init__.py  forms.py  helpers.py  routes.py  rule_processor.py
app/spotify/: __init__.py  csv_data_manager.py  routes.py  utils.py
app/static/css/: style.css
app/static/js/: artists.js  audio_features.js  loading-helper.js  saved_tracks.js  theme-manager.js
app/templates/: base.html
app/templates/admin/: beta_signups.html  metrics_dashboard.html
app/templates/auth/: beta_signup.html  login.html  profile.html  register.html
app/templates/main/: about.html  dashboard.html  index.html
app/templates/randomizer/: debug_result.html  edit_config.html  index.html  sync_playlists.html
app/templates/spotify/: visualize_artists.html  visualize_audio_features.html  visualize_generic.html  visualize_saved_tracks.html  visualize_top_tracks.html
data/: merge_csvs.py
tests/: check_db.py  debug_users.py
