[tool.poetry]
name = "spiffy"
version = "0.1.0"
description = ""
authors = ["Ewvyx <nix.anson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-wtf = "^1.2.2"
flask-login = "^0.6.3"
flask-mail = "^0.10.0"
flask-script = "^2.0.6"
flask-cors = "^5.0.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
